fix: darken X (Twitter) icon color to be visible on white background

--- a/source/css/custom.css
+++ b/source/css/custom.css
@@ -193,3 +193,8 @@ code, pre, kbd,
   font-size: 0.9rem;
   color: #7a7a7a;
 }
+
+/* X (Twitter) icon: override white default to dark */
+.fa-x-twitter {
+  color: #111111 !important;
+}
